--- a/css/main.css
+++ b/css/main.css
@@ -604,7 +604,7 @@ header {
   width: 0;
   height: 0;
   border-style: solid;
-  border-width: 0 80px 80px 0;
+  border-width: 0 90px 90px 0;
   border-color: transparent #00000009 transparent transparent;
 }
 
@@ -616,7 +616,7 @@ header {
   width: 216px;
 }
 
-.servises__card span {
+.servises__card div {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -634,7 +634,7 @@ header {
   font-family: "Jeko-Bold", sans-serif;
   line-height: 25px;
   position: relative;
-  color: #FF004F;
+  color: #ff004f;
   font-size: 20px;
   text-decoration: none;
   font-weight: 700;
@@ -686,8 +686,8 @@ header {
   left: 95px;
   width: 578px;
   border-radius: 6px;
-  -webkit-box-shadow: 0px 6px 30px 0px #0000001F;
-          box-shadow: 0px 6px 30px 0px #0000001F;
+  -webkit-box-shadow: 0px 6px 30px 0px #0000001f;
+          box-shadow: 0px 6px 30px 0px #0000001f;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -737,28 +737,87 @@ header {
   height: 60px;
   width: 296px;
   border-radius: 30px;
-  background-color: #FF004F;
+  background-color: #ff004f;
   border: none;
   margin-top: 25px;
   color: #ffffff;
 }
 
-@media only screen and (max-width: 900px) {
+@media only screen and (min-width: 901px) and (max-width: 1180px) {
+  .wrapper {
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+  }
   .servises__card {
-    width: 46.6%;
+    width: 31.5%;
+    margin-right: 0;
+    margin-bottom: 25px;
+  }
+  .servises__card .card__text {
+    width: 80%;
+  }
+  .servises__form {
+    left: 0;
   }
 }
 
-@media only screen and (max-width: 550px) {
+@media only screen and (max-width: 900px) {
+  .wrapper {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .servises__card {
+    width: 46.6%;
+  }
+  .servises__card:nth-child(3) {
+    margin: 0 30px 30px 0;
+  }
+  .servises__card:nth-child(2n) {
+    margin-right: 0;
+  }
   .servises__form {
     left: 0;
+  }
+}
+
+@media only screen and (max-width: 700px) {
+  .servises__card {
+    -webkit-box-shadow: 3px 4px 10px 0px #00000029;
+            box-shadow: 3px 4px 10px 0px #00000029;
+    margin: 0 3% 3% 0;
+  }
+  .servises__card:nth-child(3) {
+    margin: 0 3% 3% 0;
+  }
+  .servises__card:hover {
+    -webkit-box-shadow: 7px 7px 10px 0px #00000029;
+            box-shadow: 7px 7px 10px 0px #00000029;
+  }
+  .card__text {
+    width: 85%;
+  }
+}
+
+@media only screen and (max-width: 560px) {
+  .servises__title {
+    font-size: 55px;
+  }
+  .servises__form {
+    left: 0;
+  }
+  .servises-form__input {
+    width: 90%;
   }
   .servises__card {
     margin: 0 auto 20px auto;
     width: 92%;
   }
-  .servises__card:nth-child(3), .servises__card:nth-child(6) {
-    margin: 0 auto 30px auto;
+  .servises__card:nth-child(3) {
+    margin-right: 0;
+  }
+  .servises__card:nth-child(2), .servises__card:nth-child(4), .servises__card:nth-child(6) {
+    margin-left: 0;
   }
 }
 
@@ -856,6 +915,28 @@ header {
   background-position: center;
 }
 
+@media only screen and (min-width: 551px) and (max-width: 750px) {
+  .text-wrapper {
+    margin-left: 70px;
+  }
+  .intro__subtitle {
+    width: 480px;
+  }
+}
+
+@media only screen and (max-width: 550px) {
+  .text-wrapper {
+    width: 90%;
+    margin: 80px 0 100px 40px;
+  }
+  .text-wrapper .intro__title {
+    width: 100%;
+  }
+  .text-wrapper .intro__subtitle {
+    width: 100%;
+  }
+}
+
 @media only screen and (max-width: 380px) {
   .text-wrapper {
     margin: 100px 0 100px 10px;
@@ -927,6 +1008,10 @@ header {
   }
 }
 
+.price {
+  padding-bottom: 50px;
+}
+
 .price__title {
   font-family: "Orbitron", sans-serif;
   font-size: 66px;
@@ -947,8 +1032,6 @@ header {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
@@ -960,8 +1043,8 @@ header {
 
 .price-card {
   padding: 40px 26px;
-  width: 370px;
-  margin-right: 30px;
+  width: 31.6%;
+  margin-right: 20px;
   border-radius: 6px;
   background: #f8f8f8;
   text-align: center;
@@ -972,7 +1055,7 @@ header {
 }
 
 .price-card:nth-child(2) h4 {
-  color: #FF004F;
+  color: #ff004f;
 }
 
 .price-card__title {
@@ -997,7 +1080,7 @@ header {
   border: 1px solid #5a5a5a;
   color: #5a5a5a;
   height: 60px;
-  width: 230px;
+  width: 73%;
   border-radius: 30px;
   background-color: transparent;
   font-weight: 600;
@@ -1011,7 +1094,7 @@ header {
 }
 
 .select {
-  color: #2C2C2C;
+  color: #2c2c2c;
   font-family: "Jeko-Medium", sans-serif;
   font-size: 24px;
   font-weight: 400;
@@ -1025,7 +1108,13 @@ header {
   margin: 20px auto 40px auto;
   width: 370px;
   border-radius: 30px;
-  background: #F9F7F7;
+  background: #f9f7f7;
+}
+
+@media only screen and (max-width: 750px) {
+  .price {
+    background-color: red;
+  }
 }
 
 @media only screen and (max-width: 380px) {
@@ -1160,6 +1249,9 @@ header {
 }
 
 .portfolio-cards {
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  width: 100%;
   padding: 40px 0 120px 0;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1175,10 +1267,10 @@ header {
 }
 
 .portfolio-card {
-  margin: 30px 30px 0 0;
+  margin-bottom: 20px;
   background: #FFFFFF;
   height: 340px;
-  width: 360px;
+  width: 31.6%;
   border-radius: 6px;
   border: 1px solid #EFEFEF;
 }
@@ -1212,6 +1304,12 @@ header {
   top: 0;
   -webkit-transform: rotate(-90deg);
           transform: rotate(-90deg);
+}
+
+@media only screen and (max-width: 800px) {
+  .portfolio-card {
+    width: 46%;
+  }
 }
 
 @media only screen and (max-width: 580px) {
@@ -1281,7 +1379,6 @@ header {
   font-size: 22px;
   font-weight: 400;
   line-height: 29px;
-  text-align: justified;
   width: 570px;
   opacity: 70%;
 }
@@ -1293,11 +1390,25 @@ header {
 .about__img {
   width: 90%;
   height: 346px;
-  margin: 30px 50px 0 50px;
+  margin: 30px 0 0 35px;
   position: relative;
   bottom: -4px;
   -o-object-fit: cover;
      object-fit: cover;
+}
+
+@media only screen and (max-width: 780px) {
+  .about-text-wrapper {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    padding: 0 20px;
+  }
+  .about-text-wrapper .about__text {
+    width: 82%;
+    margin-bottom: 20px;
+  }
 }
 
 @media only screen and (max-width: 550px) {
@@ -1361,8 +1472,7 @@ header {
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
   list-style-type: none;
-  width: 1122px;
-  height: 580px;
+  width: 100%;
   position: relative;
   background: #f3f0f0;
 }
@@ -1370,22 +1480,22 @@ header {
 .skills::before {
   position: absolute;
   content: "";
-  top: 275px;
-  left: 360px;
-  width: 25px;
+  top: 277px;
+  left: 31.5%;
+  width: 30px;
   border-radius: 50%;
-  height: 25px;
+  height: 30px;
   background-color: #ffffff;
 }
 
 .skills::after {
   position: absolute;
   content: "";
-  top: 275px;
-  left: 735px;
-  width: 25px;
+  top: 277px;
+  left: 65%;
+  width: 30px;
   border-radius: 50%;
-  height: 25px;
+  height: 30px;
   background-color: #ffffff;
 }
 
@@ -1394,7 +1504,7 @@ header {
   background-color: #ffffff;
   margin-right: 6px;
   margin-bottom: 6px;
-  width: 370px;
+  width: 32.9%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1412,8 +1522,16 @@ header {
   margin-right: 0;
 }
 
-.skill-card:nth-child(1), .skill-card:nth-child(2), .skill-card:nth-child(3) {
-  padding: 0;
+.skill-card:nth-child(4) .skill-card__title, .skill-card:nth-child(5) .skill-card__title, .skill-card:nth-child(6) .skill-card__title {
+  margin-top: 30px;
+}
+
+.skill-card:nth-child(4)::before, .skill-card:nth-child(5)::before, .skill-card:nth-child(6)::before {
+  top: 30px;
+}
+
+.skill-card:nth-child(4)::after, .skill-card:nth-child(5)::after, .skill-card:nth-child(6)::after {
+  top: 60px;
 }
 
 .skill-card::before {
@@ -1429,7 +1547,7 @@ header {
 .skill-card::after {
   position: absolute;
   content: "";
-  left: 180px;
+  left: 50%;
   top: 40px;
   width: 65px;
   height: 65px;
@@ -1445,12 +1563,24 @@ header {
   background: url("../../img/u_flask.svg");
 }
 
+.skill-card:nth-child(4) {
+  margin-bottom: 0;
+}
+
 .skill-card:nth-child(4)::after {
   background: url("../../img/u_chart-down.svg");
 }
 
+.skill-card:nth-child(5) {
+  margin-bottom: 0;
+}
+
 .skill-card:nth-child(5)::after {
   background: url("../../img/u_game-structure.svg");
+}
+
+.skill-card:nth-child(6) {
+  margin-bottom: 0;
 }
 
 .skill-card:nth-child(6)::after {
@@ -1477,12 +1607,84 @@ header {
   text-align: center;
 }
 
+@media only screen and (max-width: 930px) {
+  .skills::before {
+    left: 48.1%;
+  }
+  .skills::after {
+    top: 64%;
+    left: 48.2%;
+  }
+  .skill-card {
+    width: 49.6%;
+  }
+  .skill-card:nth-child(2n) {
+    margin-right: 0;
+  }
+  .skill-card:nth-child(3) {
+    margin-right: 6px;
+  }
+  .skill-card:nth-child(4) {
+    margin-bottom: 6px;
+  }
+}
+
+@media only screen and (max-width: 900px) {
+  .skills {
+    width: 100%;
+  }
+  .skills::before {
+    top: 32%;
+    left: 47.7%;
+  }
+  .skills::after {
+    top: 64%;
+    left: 47.7%;
+  }
+  .skill-card {
+    width: 49.3%;
+  }
+  .skill-card:nth-child(3) {
+    margin: 0 6px 6px 0;
+  }
+  .skill-card__text {
+    width: 95%;
+  }
+}
+
+@media only screen and (max-width: 450px) {
+  .skills::before, .skills::after {
+    display: none;
+  }
+  .whatget__title {
+    line-height: 60px;
+    font-size: 50px;
+  }
+  .skill-card {
+    margin: 0 auto 2px auto;
+    width: 100%;
+  }
+  .skill-card::before {
+    top: 30px;
+  }
+  .skill-card::after {
+    top: 70px;
+    left: 50%;
+  }
+  .skill-card:nth-child(3) {
+    margin: 0 0 2px 0;
+  }
+  .skill-card:nth-child(4), .skill-card:nth-child(5) {
+    margin-bottom: 2px;
+  }
+}
+
 @media only screen and (max-width: 380px) {
   .whatget__title {
     text-align: center;
     font-size: 33px;
     line-height: 43px;
-    margin-top: 50px 0 20px 0;
+    margin: 50px 0 20px 0;
   }
   .skills {
     width: 100%;
