--- a/scss/blocks/_about.scss
+++ b/scss/blocks/_about.scss
@@ -22,7 +22,6 @@
 font-size: 22px;
 font-weight: 400;
 line-height: 29px;
-text-align: justified;
     width: 570px;
 opacity: 70%;
 }
@@ -33,10 +32,25 @@ opacity: 70%;
 .about__img{
 width: 90%;
     height: 346px;
-    margin: 30px 50px 0 50px;
+    margin: 30px 0 0 35px;
     position: relative;
     bottom: -4px;
     object-fit: cover;
+}
+
+@include breakpoint-down(780px){
+.about-text-wrapper{
+    flex-direction: column;
+padding: 0 20px;
+    .about__text{
+        width: 82%;
+        margin-bottom: 20px;
+    }
+}
+
+// .about__img{
+
+// }
 }
 
 @include breakpoint-down(550px){
