--- a/scss/blocks/_creatives.scss
+++ b/scss/blocks/_creatives.scss
@@ -20,6 +20,8 @@ line-height: 31px;
  }
 
  .portfolio-cards{
+     justify-content: space-around;
+     width: 100%;
      padding: 40px 0 120px 0;
 display: flex;
 flex-wrap: wrap;
@@ -31,16 +33,17 @@ flex-wrap: wrap;
 }
  .portfolio-card{
 
-    margin: 30px 30px 0 0;
+    margin-bottom: 20px;
     background: #FFFFFF;
     height: 340px;
-    width: 360px;
+    width: 31.6%;
     border-radius: 6px;
     border: 1px solid #EFEFEF;
 
     &:nth-child(3n){
       margin-right: 0;
     }
+
 
     &:hover{
         box-shadow: 0px 6px 30px 0px #00000029;
@@ -68,6 +71,13 @@ font-weight: 700;
     transform: rotate(-90deg);
 }
 }
+
+@include breakpoint-down(800px){
+.portfolio-card{
+    width: 46%;
+}
+}
+
 
 @include breakpoint-down(580px){
 .portfolio-card{
