--- a/scss/blocks/_intro.scss
+++ b/scss/blocks/_intro.scss
@@ -51,7 +51,26 @@ left: 47%;
     }
 }
 
-
+@include breakpoint-between(551px, 750px){
+.text-wrapper{
+    margin-left: 70px;
+}
+    .intro__subtitle{
+    width: 480px;
+}
+}
+@include breakpoint-down(550px){
+.text-wrapper{
+    width: 90%;
+    margin:80px 0 100px 40px;
+.intro__title{
+    width: 100%;
+}
+.intro__subtitle{
+    width: 100%;
+}
+}
+}
 @include breakpoint-down(380px){
     .text-wrapper{
         margin:100px 0 100px 10px;
