--- a/scss/blocks/_price.scss
+++ b/scss/blocks/_price.scss
@@ -1,6 +1,6 @@
-// .price {
-//   height: 900px;
-// }
+.price {
+  padding-bottom: 50px;
+}
 .price__title {
   font-family: "Orbitron", sans-serif;
   font-size: 66px;
@@ -11,22 +11,22 @@
 
 .price__subtitle {
   font-family: "Jeko-Medium", sans-serif;
-font-size: 24px;
-font-weight: 400;
-line-height: 26px;
+  font-size: 24px;
+  font-weight: 400;
+  line-height: 26px;
   text-align: center;
 }
 .price-cards {
   display: flex;
-  flex-wrap: wrap;
+  // flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
   list-style-type: none;
 }
 .price-card {
   padding: 40px 26px;
-  width: 370px;
-  margin-right: 30px;
+  width: 31.6%;
+  margin-right: 20px;
   border-radius: 6px;
   background: #f8f8f8;
   text-align: center;
@@ -34,14 +34,14 @@ line-height: 26px;
   &:last-child {
     margin: 0;
   }
-  &:nth-child(2){
-h4{
-  color: #FF004F;
-}
+  &:nth-child(2) {
+    h4 {
+      color: #ff004f;
+    }
   }
 }
 
-.price-card__title { 
+.price-card__title {
   font-family: "Jeko-ExtraBold", sans-serif;
   font-size: 24px;
   font-weight: 800;
@@ -50,21 +50,20 @@ h4{
   margin-bottom: 4px;
 }
 
-.price-card__subtitle{
-font-family: "Jeko-Medium", sans-serif;
-font-size: 16px;
-font-weight: 400;
-line-height: 20px;
-text-align: center;
-color: #979797;
-
+.price-card__subtitle {
+  font-family: "Jeko-Medium", sans-serif;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 20px;
+  text-align: center;
+  color: #979797;
 }
 
 .price-card__btn {
   border: 1px solid #5a5a5a;
   color: #5a5a5a;
   height: 60px;
-  width: 230px;
+  width: 73%;
   border-radius: 30px;
   background-color: transparent;
   font-weight: 600;
@@ -76,56 +75,53 @@ color: #979797;
   }
 }
 
-.select{
-  color: #2C2C2C;
+.select {
+  color: #2c2c2c;
   font-family: "Jeko-Medium", sans-serif;
-font-size: 24px;
-font-weight: 400;
-line-height: 26px;
-    position: relative;
-    left: 34%;
-    height: 60px;
-    outline: none;
-    border: none;
-    padding: 16px 26px;
-    margin: 20px auto 40px auto;
-width: 370px;
-border-radius: 30px;
-background: #F9F7F7;
-
+  font-size: 24px;
+  font-weight: 400;
+  line-height: 26px;
+  position: relative;
+  left: 34%;
+  height: 60px;
+  outline: none;
+  border: none;
+  padding: 16px 26px;
+  margin: 20px auto 40px auto;
+  width: 370px;
+  border-radius: 30px;
+  background: #f9f7f7;
 }
 
+@include breakpoint-down(750px) {
+  .price {
+    background-color: red;
+  }
+}
 
-
-
-@include breakpoint-down(380px){
- .price__title{
-  font-size: 33px;
-  line-height: 43px;
-  
- }
- 
- .price__subtitle{
-  font-size: 20px;
-  line-height: 22px;
- }
-  .price-card{
-    width: 100%;
-    margin:10px 0;
+@include breakpoint-down(380px) {
+  .price__title {
+    font-size: 33px;
+    line-height: 43px;
   }
 
+  .price__subtitle {
+    font-size: 20px;
+    line-height: 22px;
+  }
+  .price-card {
+    width: 100%;
+    margin: 10px 0;
+  }
 
-.icons{
-  display: flex;
-  align-items: center;
-display: none;
-}
+  .icons {
+    display: flex;
+    align-items: center;
+    display: none;
+  }
 
-.select{
-  width: 100%;
-left: 0;
-}
-
-
-
+  .select {
+    width: 100%;
+    left: 0;
+  }
 }
