--- a/scss/blocks/_whatget.scss
+++ b/scss/blocks/_whatget.scss
@@ -1,4 +1,3 @@
-
 .whatget__title {
   margin-top: 100px;
   margin-bottom: 70px;
@@ -13,40 +12,37 @@
   display: flex;
   flex-wrap: wrap;
   list-style-type: none;
-  width: 1122px;
-  height: 580px;
+  width: 100%;
   position: relative;
   background: rgba(243, 240, 240, 1);
   &::before {
     position: absolute;
     content: "";
-    top: 275px;
-    left: 360px;
-    width: 25px;
+    top: 277px;
+    left: 31.5%;
+    width: 30px;
     border-radius: 50%;
-    height: 25px;
+    height: 30px;
     background-color: #ffffff;
   }
   &::after {
     position: absolute;
     content: "";
-    top: 275px;
-    left: 735px;
-    width: 25px;
+    top: 277px;
+    left: 65%;
+    width: 30px;
     border-radius: 50%;
-    height: 25px;
+    height: 30px;
     background-color: #ffffff;
   }
 }
 
 .skill-card {
   position: relative;
-  // padding-top: 40px;
   background-color: #ffffff;
   margin-right: 6px;
   margin-bottom: 6px;
-  width: 370px;
-  // height: 270px;
+  width: 32.9%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -55,12 +51,19 @@
   &:nth-child(3n) {
     margin-right: 0;
   }
-  &:nth-child(1),
-  &:nth-child(2),
-  &:nth-child(3) {
-    padding: 0;
-  }
 
+  &:nth-child(4), &:nth-child(5), &:nth-child(6) {
+    .skill-card__title{
+      margin-top: 30px;
+    }
+   &::before{
+     top: 30px;
+   }
+   &::after{
+     top: 60px;
+   }
+  }
+  
   &::before {
     position: relative;
     content: "";
@@ -74,7 +77,7 @@
   &::after {
     position: absolute;
     content: "";
-    left: 180px;
+    left: 50%;
     top: 40px;
     width: 65px;
     height: 65px;
@@ -95,17 +98,20 @@
   }
 
   &:nth-child(4) {
+    margin-bottom: 0;
     &::after {
       background: url("../../img/u_chart-down.svg");
     }
   }
   &:nth-child(5) {
+    margin-bottom: 0;
     &::after {
       background: url("../../img/u_game-structure.svg");
     }
   }
 
   &:nth-child(6) {
+    margin-bottom: 0;
     &::after {
       background: url("../../img/u_shield-check.svg");
     }
@@ -133,13 +139,94 @@ text-align: center;
 
 }
 
+@include breakpoint-down(930px) {
+  .skills{
+    &::before{
+      left: 48.1%;
+    }
+    &::after{
+      top: 64%;
+      left: 48.2%;
+    }
+  }
+.skill-card{
+  width: 49.6%;
+
+  &:nth-child(2n){
+    margin-right: 0;
+  }
+
+  &:nth-child(3){
+    margin-right: 6px;
+  }
+
+  &:nth-child(4){
+    margin-bottom: 6px;
+  }
+}
+}
+@include breakpoint-down(900px) {
+.skills{
+  width: 100%;
+
+  &::before{
+    top: 32%;
+    left: 47.7%;
+  }
+  &::after{
+    top: 64%;
+    left: 47.7%;
+  }
+}
+.skill-card{
+    width: 49.3%;
+
+  &:nth-child(3){
+    margin: 0 6px 6px 0;
+  }
+}
+
+.skill-card__text{
+  width: 95%;
+}
+}
+@include breakpoint-down(450px) {
+  .skills{
+    &::before, &::after{
+      display: none;
+    }
+  }
+.whatget__title{
+  line-height: 60px;
+  font-size: 50px;
+}
+  .skill-card{
+  margin:0 auto 2px auto;
+    width: 100%;
+
+  &::before{
+    top: 30px;
+  }
+&::after{
+ top: 70px;
+  left: 50%;
+}
+  &:nth-child(3){
+    margin: 0 0 2px 0;
+  }
+
+  &:nth-child(4), &:nth-child(5){
+margin-bottom: 2px;
+  }
+}
+}
 
 @include breakpoint-down(380px) {
 .whatget__title{
   text-align: center;
   font-size: 33px;
   line-height: 43px;
-  margin-top: 50px 0 20px 0;
+  margin: 50px 0 20px 0;
 }
 
   .skills{
