--- a/scss/blocks/_price.scss
+++ b/scss/blocks/_price.scss
@@ -81,23 +81,21 @@
   font-size: 24px;
   font-weight: 400;
   line-height: 26px;
-  position: relative;
-  left: 34%; 
   height: 60px;
   outline: none;
   border: none;
   padding: 16px 26px;
-  margin: 20px auto 40px auto;
   width: 370px;
   border-radius: 30px;
   background: #f9f7f7;
 }
 
-@include breakpoint-between(380px, 1180px){
-  .select{
-    right: 0;
-    left: 0;
-  }
+.select-wrapper{
+  display: flex;
+  margin: 20px auto 40px auto;
+  align-items: center;
+  justify-content: center;
+  height: 50px;
 }
 
 @include breakpoint-down(775px) {
