--- a/scss/blocks/_about.scss
+++ b/scss/blocks/_about.scss
@@ -1,5 +1,6 @@
 .about{
-    padding-top: 100px;
+    margin-top: -150px;
+    padding-top: 250px;
     background-color: $color-dark;
     .container{
         height: 100%;
