--- a/scss/blocks/_clients.scss
+++ b/scss/blocks/_clients.scss
@@ -13,12 +13,17 @@ text-align: center;
 padding-bottom: 15px;
 }
 
-.carusel{
-    display: flex;
-    list-style-type: none;
-}
 
-.carusel-item{
+.slider{
+    height: 250px;
+    margin: auto;
+    position: relative;
+    width: 90%;
+    display: grid;
+    place-items: center;
+    overflow: hidden;
+ }
+.slide{
     width: 270px;
     height: 138px;
 border-radius: 6px;
@@ -27,9 +32,46 @@ margin-right: 20px;
 display: flex;
 align-items: center;
 justify-content: center;
+    perspective: 100px;
 
+ 
+    img{
+        transition: transform .5s cubic-bezier(0.075, 0.82, 0.165, 1);
+        &:hover{
+            transform: translateZ(20px);
+        }
+    }
 
 }
+
+.slide-track {
+    list-style-type: none;
+   display: flex;
+   width: calc(270px * 4);
+   animation: scroll 30s linear infinite;
+   animation-play-state: paused;
+
+      &:hover{
+    animation-play-state: running;
+}
+}
+
+
+
+@keyframes scroll {
+    0%{
+        transform: translateX(0);
+    }
+    100%{
+        transform: translateX(calc(-270px * 4));
+    }
+}
+
+
+
+
+
+
 
 
 @include breakpoint-down(380px){
@@ -43,12 +85,8 @@ font-size: 32px;
 
     }
 
-    .carusel-item{
+    .slide{
         height: 80px;
 width: 140px;
-
-&:nth-child(1), &:nth-child(3){
-    display: none;
-}
     }
 }
