--- a/css/main.css
+++ b/css/main.css
@@ -594,6 +594,11 @@ header {
   margin-right: 0;
 }
 
+.servises__card:hover {
+  -webkit-box-shadow: 0px 10px 25px 0px #00000029;
+          box-shadow: 0px 10px 25px 0px #00000029;
+}
+
 .servises__card::before {
   position: absolute;
   top: 0;
@@ -909,10 +914,34 @@ header {
   background-image: url("../../img/Arrow.svg");
   top: 20px;
   left: 40%;
-  width: 10px;
+  width: 15px;
   height: 30px;
   background-repeat: no-repeat;
   background-position: center;
+  -webkit-animation: swipe .6s linear infinite;
+          animation: swipe .6s linear infinite;
+}
+
+@-webkit-keyframes swipe {
+  0% {
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+  }
+  10% {
+    -webkit-transform: translateY(17px);
+            transform: translateY(17px);
+  }
+}
+
+@keyframes swipe {
+  0% {
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+  }
+  10% {
+    -webkit-transform: translateY(17px);
+            transform: translateY(17px);
+  }
 }
 
 @media only screen and (min-width: 551px) and (max-width: 750px) {
@@ -1881,6 +1910,7 @@ header {
   line-height: 13px;
   color: #747474;
   width: 50%;
+  text-decoration: none;
 }
 
 .icons {
