--- a/scss/blocks/_servises.scss
+++ b/scss/blocks/_servises.scss
@@ -36,6 +36,11 @@
         margin-right: 0;
     }
 
+    &:hover{
+        box-shadow: 0px 10px 25px 0px #00000029;
+
+    }
+
     &::before {
         position: absolute;
         top: 0;
