--- a/scss/blocks/_topnavbar.scss
+++ b/scss/blocks/_topnavbar.scss
@@ -27,6 +27,7 @@ line-height: 14px;
        line-height: 13px; 
        color: #747474;
        width: 50%;
+       text-decoration: none;
     }
 }
 .icons{
